# dc_logging

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  cdk.json  package-lock.json  package.json  pyproject.toml  setup.cfg
.circleci/: config.yml
.github/: zizmor.yml
.github/actions/cdk-deploy/: action.yml
.github/actions/cdk-synth/: action.yml
.github/actions/install/: action.yml
.github/actions/node-setup/: action.yml
.github/actions/python-setup/: action.yml
.github/actions/test/: action.yml
.github/workflows/: codeql-analysis.yml  development.yml  production.yml
dc_logging_aws/: app.py  dc-wide-postcodes.yaml  setup_ssm_with_account_ids.py
dc_logging_aws/constructs/: athena_named_query_from_model.py
dc_logging_aws/constructs/lambdas/: athena_query_lambda.py  get_parameter_store_variables.py
dc_logging_aws/constructs/tasks/: postcode_searches_query.py  total_searches_query.py
dc_logging_aws/lambdas/calculate_reporting_period_dates/: handler.py
dc_logging_aws/lambdas/get_parameter_store_variables/: handler.py
dc_logging_aws/lambdas/ingest/: handler.py
dc_logging_aws/lambdas/run_athena_query_and_report_status/: handler.py
dc_logging_aws/models/: buckets.py  databases.py  models.py  queries.py  tables.py
dc_logging_aws/named_queries/: README.md  query_template.py
dc_logging_aws/named_queries/commands/: create_athena_queries.py  create_election_query_files.py  run_queries.py
dc_logging_aws/named_queries/tests/: test_datetime_to_athena_datetime_string.py  test_query_templates.py
dc_logging_aws/queries/election_reporting/: searches_by_local_authority.sql  searches_by_product.sql  total_searches_query.sql
dc_logging_aws/queries/election_reporting/totals/: total_searches_query.sql
dc_logging_aws/stacks/: base_reporting_stack.py  dc_logs_stack.py  postcode_searches_stack.py
dc_logging_client/: __init__.py  log_client.py  log_entries.py  log_from_csv.py  package-lock.json
dc_logging_legacy_import/: README.md  main.py
docs/: mermaid.json  updating-docs.md
docs/images/: aws_template.md
scripts/: cdk-deploy.sh  cdk-synth.sh  code-check.sh  run-tests.sh
tests/: conftest.py  test_firehose_client_wrapper.py  test_log_client.py
