[project]
name = "dc_logging_utils"
authors = [
  {name = "Sym Roe", email = "sym.roe@democracyclub.org.uk"},
]
license = "BSD-3-Clause"
version = "3.0.0"
description = "DC Logging client and log querying infrastructure"
readme= "README.md"
requires-python = ">=3.11"
dependencies = ["boto3>=1,<2"]

[project.urls]
source = "https://github.com/DemocracyClub/dc_logging"
tracker = "https://github.com/DemocracyClub/dc_logging/issues"

[dependency-groups]
aws = [
    # Matches the Node version of the CDK in package.json
    "aws-cdk-lib==2.200.1",
    "aws_cdk.aws_lambda_python_alpha==2.200.1a0",
    "aws-cdk.aws-glue-alpha==2.200.1a0",
    "constructs==10.4.2",
    "cachetools==v5.2.0",
    "wheel==0.38.4",
    "attrs==25.4.0",
]
dev = [
    "boto3==1.35.99",
    "mypy-boto3-organizations==1.28.36",
    "mypy-boto3-ssm==1.38.5",
    "ruff==0.1.8",
    "ipdb==0.13.13",
    "pytest==7.2.2",
    "pytest-ruff==0.4.1",
    "pytest-cov==6.1.1",
    "boto3-stubs[firehose,s3,sts,organizations,lambda]==1.28.80",
    "psycopg[binary]==3.2.9",
    "tqdm==4.67.1",
    "moto[firehose,awslambda,apigateway,proxy,sts]==5.0.19",
    "yamllint==1.37.1",
]

[tool.uv]
required-version = "==0.8.*"

[tool.uv.build-backend]
module-name = "dc_logging_client"
module-root = ""

[build-system]
requires = ["uv_build==0.8.*"]
build-backend = "uv_build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=dc_logging_client --cov-report xml:coverage.xml"
norecursedirs = ["cdk.out", "node_modules"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["E501"]
extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "@abstractmethod"
]
