[metadata]
name = dc_logging_utils
version = attr: dc_logging_client.__version__
author = Sym Roe
author_email = sym.roe@democracyclub.org.uk
description = Logging from Python apps in to AWS Firehose
long_description = file: README.md
license = BSD-3-Clause
project_urls =
    Source = https://github.com/DemocracyClub/dc_logging
    Tracker = https://github.com/DemocracyClub/dc_logging/issues

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = true
install_requires =
    boto3 == 1.20.52
    mypy-boto3-firehose == 1.20.49
    mypy-boto3-s3 == 1.20.49
    mypy-boto3-sts == 1.20.49
    mypy-extensions == 0.4.3
    cachetools == 5.0.0

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = dc_logging_client
